--- a/btop.conf
+++ b/btop.conf
@@ -1,4 +1,5 @@
 #? Config file for btop v. 1.2.7
+#Updated meokgo
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
